# benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bench/: CMakeLists.txt  expr_bt.cc  expr_va.cc  find_bench.cc  gate_oo_bench.cc  gate_va_bench.cc  insert_bench.cc  intersection_bench.cc  random_bits.hh  union_bench.cc
c++/bench/: CMakeLists.txt  expr_va.cc  gate_c_bench.cc  gate_oo_bench.cc  gate_va_bench.cc  prop_logic_bench.cc  random_bits.hh  union_bench.cc
c++/include/benchset/: insert_unique.hh  myflat.hh
c++/include/expr/: bt.hh  va.hh
c++/include/logic/: c_prop.h  prop.hh
include/benchset/: intersection.hh  union.hh
include/gates/: c.h  oo.hh  va.hh
python/: figure.py  results_desktop_corei5_6600_gcc_6.2_ubuntu16.10.txt
rust/: Cargo.toml
rust/src/: lib.rs
